[gd_scene load_steps=5 format=3 uid="uid://csivu3m4i2xbe"]

[ext_resource type="Script" uid="uid://cexat7rcofsug" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://w2daqisnoou8" path="res://Player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c5y5cxnmqumkh" path="res://mob.tscn" id="2_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0xm2m")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
